# fbot_world

./: README.md  install.sh  package.xml  requirements.txt  setup.py
config/: face_recognition.yaml  plugin.yaml
fbot_world/: README.md  package.xml  setup.cfg  setup.py
fbot_world/config/: clean_up_poses.yaml  help_me_carry.yaml  plugin.yaml  pose_criarg.yaml  pose_yaml.yaml  recep_test.yaml  receptionist_poses.yaml  storing_groceries_poses.yaml
fbot_world/fbot_world/: pose.py  pose_writer.py
fbot_world/launch/: pose.launch.py
fbot_world/scripts/: merge_yaml_files.py  world_plugin.py
fbot_world/world_scripts/: __init__.py
fbot_world_bringup/: README.md  setup.cfg  setup.py
fbot_world_bringup/config/: inspection.yaml  plugin.yaml  pose.yaml  pose_carry_my_luggage.yaml  pose_clean_the_table.yaml  pose_criarg.yaml  recep_test.yaml  receptionist_poses.yaml  sotring_groceries_poses.yaml  store_groceries_1.yaml  storing_groceries.yaml  storing_groceries_poses.yaml  test_setup_storing.yaml
fbot_world_bringup/launch/: pose.launch.py
fbot_world_bringup/nodes/: pose.py  pose_viewer.py  pose_writer.py
fbot_world_bringup/scripts/: __init__.py  merge_yaml_files.py  teste.py
fbot_world_msgs/: CMakeLists.txt  package.xml
fbot_world_msgs/msg/: FBOTPoses.msg
fbot_world_msgs/srv/: GetKey.srv  GetPose.srv  GetPoseFromSet.srv  GetSets.srv
fbot_world_nodes/: package.xml  setup.cfg  setup.py
fbot_world_nodes/nodes/: pose.py  (+1 more)
launch/: face_recognition_writer.launch.py  pose.launch.py
nodes/: pose.py
scripts/: __init__.py  marge_yaml_files.py  world_plugin.py
(+6 files in other folders)
